Fix alignments and images for small screen & search bar

--- a/mu-plugins/blocks/global-header-footer/postcss/header/get-wordpress.pcss
+++ b/mu-plugins/blocks/global-header-footer/postcss/header/get-wordpress.pcss
@@ -7,23 +7,25 @@
 	/* This is the `a` on desktop, and the containing `li` on mobile. */
 	& .global-header__get-wordpress {
 		background-color: var(--wp--preset--color--blue-1) !important; /* Override Gutenberg's !important */
-		color: var(--wp--preset--color--white);
+		color: var(--wp--preset--color--white) !important; /* Override the header color scheme */
 		padding: 10px 19px;
 		border-radius: 2px;
 		font-weight: 700;
+		border: 1px dashed transparent;
 
 		&:hover {
 			cursor: pointer;
-			background-color: var(--wp--preset--color--blue-2) !important; /* Override Gutenberg's !important */
+			background-color: var(--wp--preset--color--blue-5) !important; /* Override Gutenberg's !important */
 		}
 
 		&:active {
 			background-color: var(--wp--preset--color--black) !important; /* Override Gutenberg's !important */
-			border: 1px dashed var(--wp--preset--color--white);
+			border-color: var(--wp--preset--color--white);
 		}
 
-		&:focus {
-			border: 1px dashed var(--wp--preset--color--white);
+		&:focus,
+		&:focus-within {
+			border-color: var(--wp--preset--color--white);
 		}
 	}
 
@@ -63,7 +65,9 @@
 			margin: 0 auto;
 			padding: 0;
 
-			&:hover {
+			&:hover,
+			&:focus,
+			&:focus-within {
 				background-color: unset;
 			}
 		}
