--- a/mu-plugins/blocks/global-header-footer/postcss/header/header.pcss
+++ b/mu-plugins/blocks/global-header-footer/postcss/header/header.pcss
@@ -83,9 +83,9 @@ html {
 		top: var(--wp-admin--admin-bar--height, 0);
 		padding-top: 18px; /* Magic numbers to center the 24px icon in 60px height. */
 		padding-right: calc(var(--wp--style--block-gap) + var(--wp--custom--alignment--scroll-bar-width));
-		padding-bottom: 28px; /* Magic numbers to center the 24px icon in 60px height. */
+		padding-bottom: 18px; /* Magic numbers to center the 24px icon in 60px height. */
 		padding-left: var(--wp--style--block-gap);
-		background-color: var(--wp-global-header--background-color);
+		background-color: var(--wp-global-header--background-color--hover);
 	}
 }
 
